k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: fame-api
  namespace: fame
spec:
  selector:
    app: fame-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
